StatefullSet/pod-name-label/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-headless
spec:
  ingressClassName: system-ingress
  rules:
  - host: app0.k.erushnikov.ru
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app0
              port:
                name: http
  - host: app1.k.erushnikov.ru
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app1
              port:
                name: http
